--- a/public-index.html
+++ b/public-index.html
@@ -72,7 +72,6 @@
       left: 10px;
     }
 
-    /* ORIGINAL SVG plane restored */
     #plane {
       width: 80px;
       position: absolute;
@@ -151,7 +150,6 @@
 <div class="game-box">
   <div id="multiplier">1.00x</div>
 
-  <!-- ORIGINAL plane SVG -->
   <svg id="plane" viewBox="0 0 64 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
     <path d="M4 18 C18 18 32 16 46 12 C50 11 54 9 60 8 L58 6 C52 7 48 9 44 10 C30 14 18 16 6 18 Z" fill="#FFD54F"/>
     <path d="M18 18 L36 10 L40 12 L24 20 Z" fill="#FF7043"/>
@@ -172,7 +170,6 @@
   <button onclick="withdraw()">Withdraw ZMW</button>
 </div>
 
-<!-- LOGIN MODAL -->
 <div class="modal" id="loginModal">
   <div class="modal-content">
     <h3>Login</h3>
@@ -183,7 +180,6 @@
   </div>
 </div>
 
-<!-- REGISTER MODAL -->
 <div class="modal" id="registerModal">
   <div class="modal-content">
     <h3>Register</h3>
@@ -196,7 +192,7 @@
 </div>
 
 <script>
-const API = "https://ka-ndeke-backend-momo.onrender.com";
+const API = "https://ka-ndeke-backend-5dgy.onrender.com/api"; // <-- updated backend
 
 let user = { guest: true };
 let balance = 10;
@@ -249,7 +245,6 @@ function startGame() {
   interval = setInterval(() => {
     multiplier += 0.01;
     document.getElementById("multiplier").textContent = multiplier.toFixed(2) + "x";
-    // Curved flight
     planeEl.style.transform = `translate(${multiplier * 30}px, -${multiplier * 15}px)`;
 
     if (multiplier >= crashPoint) {
@@ -316,7 +311,7 @@ async function register() {
       method: "POST",
       headers: { "Content-Type": "application/json" },
       body: JSON.stringify({
-        name: regName.value,
+        username: regName.value,
         phone: regPhone.value,
         password: regPassword.value
       })
@@ -366,4 +361,4 @@ function withdraw() {
 </script>
 
 </body>
-      </html>
+                              </html>
