--- a/public-index.html
+++ b/public-index.html
@@ -164,10 +164,10 @@ a { color: #FFD700 !important; }
 const API = "https://ka-ndeke-backend-5dgy.onrender.com/api"; // backend base
 
 let user = { guest: true };
-let balance = 10;
+let balance = Number(localStorage.getItem("guest_balance") || 10);
 let running = false;
 let multiplier = 1;
-let interval;
+let interval = null;
 let crashPoint = 0;
 let currentBet = 0;
 let currentRoundId = null;
@@ -228,23 +228,32 @@ async function startGame() {
   const res = await fetch(API + "/game/start", {
     method: "POST",
     headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({ betAmount: bet })
-  });
+    body: JSON.stringify({
+  betAmount: bet,
+  userId: user.guest ? "guest" : user.id
+  })
+});
 
   const data = await res.json();
 
-  if (!res.ok) {
-    return alert(data.error || "Failed to start round");
-  }
+if (!res.ok) {
+  return alert(data.error || "Failed to start round");
+}
 
-  currentRoundId = data.roundId;
-  currentBet = bet;
+// 🔐 SYNC BALANCE FROM SERVER
+if (data.balance !== undefined) {
+  balance = Number(data.balance);
+}
 
-  running = true;
+currentRoundId = data.roundId;
+currentBet = bet;
+running = true;
+
+updateUI();
   // 🔁 Start backend crash polling
 statusPoller = setInterval(async () => {
   try {
-    const res = await fetch(`${API}/game/status/${currentRoundId}`);
+    const res = await fetch(`${API}/game/status/${currentRoundId}?userId=guest`);
     const data = await res.json();
 
     if (data.status === "crashed") {
@@ -260,52 +269,83 @@ statusPoller = setInterval(async () => {
   const planeEl = document.getElementById("plane");
 
   interval = setInterval(() => {
-    multiplier += 0.01;
-    document.getElementById("multiplier").textContent =
-      multiplier.toFixed(2) + "x";
+  if (!running) return;
 
-    planeEl.style.transform =
-      `translate(${multiplier * 30}px, -${multiplier * 15}px)`;
-  }, 50);
+  multiplier += 0.01;
+  document.getElementById("multiplier").innerText =
+    multiplier.toFixed(2) + "x";
+
+  const x = multiplier * 15;
+  const y = multiplier * -6;
+  planeEl.style.transform = `translate(${x}px, ${y}px)`;
+}, 100);
 }
 async function cashOut() {
+  // 🚫 No active round
   if (!running || !currentRoundId) {
     alert("No active round");
     return;
   }
+
+  // 🛑 HARD STOP — this stops the plane instantly
   running = false;
-  clearInterval(statusPoller);
-  clearInterval(interval);
+
+  if (interval) {
+    clearInterval(interval);
+    interval = null;
+  }
+
+  if (statusPoller) {
+    clearInterval(statusPoller);
+    statusPoller = null;
+  }
+
+  // 🔒 Prevent double cashout
   document.getElementById("cashOutBtn").disabled = true;
 
-  const res = await fetch(API + "/game/cashout", {
-    method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({
-      roundId: currentRoundId,
-      betAmount: currentBet,
-      multiplier: multiplier
-    })
-  });
+  let data;
 
-  const data = await res.json();
+  try {
+    const res = await fetch(API + "/game/cashout", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({
+  roundId: currentRoundId,
+  betAmount: currentBet,
+  multiplier: multiplier,
+  userId: user.guest ? "guest" : user.id
+   })
+});
 
-  if (!res.ok) {
-    alert(data.error || "Cash out failed");
+    data = await res.json();
+
+    if (!res.ok) {
+      throw new Error(data.error || "Cash out failed");
+    }
+  } catch (err) {
+    alert(err.message);
     return;
   }
 
-  if (data.win) {
-    balance += data.payout;
-    alert("You won ZMW " + data.payout.toFixed(2));
-  } else {
+  // 💰 RESULT
+  if (data.balance !== undefined) {
+  balance = Number(data.balance);
+}
+
+if (data.win) {
+  alert("You won ZMW " + data.payout.toFixed(2));
+} else {
     alert("Crashed!");
   }
 
+  // 🔁 FULL RESET
   currentRoundId = null;
   currentBet = 0;
-  clearInterval(statusPoller);
-statusPoller = null;
+
+  multiplier = 1;
+  document.getElementById("multiplier").textContent = "1.00x";
+  document.getElementById("plane").style.transform = "translate(0,0)";
+
   updateUI();
 }
 
@@ -386,7 +426,11 @@ async function register() {
 
 function logout() {
   user = { guest: true };
-  balance = 10;
+
+  // restore stored guest balance or default
+  const stored = localStorage.getItem("guest_balance");
+  balance = stored !== null ? Number(stored) : 10;
+
   localStorage.removeItem("token");
   updateUI();
 }
@@ -394,7 +438,10 @@ function logout() {
 /* GUEST MODE */
 function useGuest() {
   user = { guest: true, name: "Guest" };
-  balance = Number(localStorage.getItem("guest_balance") || 10);
+
+  const stored = localStorage.getItem("guest_balance");
+  balance = stored !== null ? Number(stored) : 10;
+
   updateUI();
 }
 
@@ -404,11 +451,26 @@ async function deposit() {
   if (!amt || isNaN(amt) || amt <= 0) return alert("Invalid amount");
 
   if (user.guest) {
-    balance += Number(amt);
-    localStorage.setItem("guest_balance", balance);
-    updateUI();
-    return;
+  const res = await fetch(API + "/users/deposit", {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({
+      amount: Number(amt),
+      userId: "guest"
+    })
+  });
+
+  const data = await res.json();
+
+  if (!res.ok) {
+    return alert(data.error || "Deposit failed");
   }
+
+  balance = Number(data.balance);
+localStorage.setItem("guest_balance", balance);
+updateUI();
+return;
+}
 
   const token = localStorage.getItem("token");
   if (!token) return alert("You must be logged in to deposit");
@@ -487,4 +549,4 @@ async function withdraw() {
 </script>
 
 </body>
-      </html>
+  </html>
