public-index.html
Name change from Ka Ndeke to FlyZed – Sky Crash Game

--- a/public-index.html
+++ b/public-index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Ka Ndeke – Aviator (Full UI + Realtime)</title>
+  <title>FlyZed – Sky Crash Game</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
   <meta name="theme-color" content="#03101f" />
   <style>
@@ -72,7 +72,7 @@
 </head>
 <body>
   <header role="banner" aria-label="App header">
-    <h1 aria-hidden="true">✈️ Ka Ndeke</h1>
+    <h1 aria-hidden="true">✈️ FlyZed</h1>
     <div class="header-right" role="navigation" aria-label="Top controls">
       <div id="metrics" class="badge" aria-live="polite">Loading metrics...</div>
       <button id="historyBtn" class="badge" onclick="showHistory()" aria-label="Show game history">History</button>
