--- a/public-index.html
+++ b/public-index.html
@@ -154,7 +154,7 @@
 
   <script>
     // ===== CONFIG =====
-    const API_BASE = '/api';
+    const API_BASE = 'https://ka-ndeke-backend-5dgy.onrender.com/api';
     const TOKEN_KEY = 'flyzed_token';
 
     // ===== STATE =====
